<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.script.muhelp.activity.NWActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/bottomBut"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/nw_id"
                android:layout_width="0dp"
                android:layout_height="0dp" />
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="50sp"
                android:text="NW"
                android:maxLines="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/title_organ"/>

                <ImageView
                    android:id="@+id/imageview"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/image_back" />

                <TextView
                    android:id="@+id/nickname"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/title_nickname" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/title_time"/>
                <TextView
                    android:id="@+id/organtime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_marginLeft="3dp"
                    android:text="2010-01-01"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/title_content"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:padding="@dimen/text_padding"
                    android:background="@drawable/textview_back"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/title_price" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:padding="@dimen/text_padding"
                    android:background="@drawable/textview_back"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/title_accepet"/>

                <ImageView
                    android:id="@+id/imageview2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/image_back" />

                <TextView
                    android:id="@+id/accnickname"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/title_nickname" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/title_acctime"/>
                <TextView
                    android:id="@+id/acctime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_marginLeft="3dp"
                    android:text="2010-01-01"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomBut"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_back"
            android:text="@string/title_back"
            android:textColor="@color/colorAccent"
            android:textSize="30dp" />

        <Button
            android:id="@+id/accepet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_back"
            android:text="@string/accepet"
            android:textColor="@color/colorAccent"
            android:textSize="30dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
